[tool.poetry]
name = "lw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
joblib = "^1.2.0"
scikit-image = "^0.19.3"
pandas = "^1.5.1"
opencv-python = "^4.6.0.66"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
